# llm-consulting-system

./: README.md
llm-consulting-system/: README.md  docker-compose.yml  e version  main.py  pyproject.toml
llm-consulting-system/auth_service/: Dockerfile  auth.db  pyproject.toml
llm-consulting-system/auth_service/app/: main.py
llm-consulting-system/auth_service/app/api/: deps.py  routes_auth.py
llm-consulting-system/auth_service/app/core/: config.py  exceptions.py  security.py
llm-consulting-system/auth_service/app/db/: models.py  session.py
llm-consulting-system/auth_service/app/repositories/: users.py
llm-consulting-system/auth_service/app/usecases/: auth.py
llm-consulting-system/auth_service/tests/: test_auth_integration.py  test_security.py
llm-consulting-system/bot_service/: Dockerfile  pyproject.toml  run_bot.py
llm-consulting-system/bot_service/app/: main.py
llm-consulting-system/bot_service/app/bot/: dispatcher.py  handlers.py
llm-consulting-system/bot_service/app/core/: config.py  jwt.py
llm-consulting-system/bot_service/app/infra/: celery_app.py  redis.py
llm-consulting-system/bot_service/app/services/: openrouter_client.py
llm-consulting-system/bot_service/app/tasks/: llm_tasks.py
llm-consulting-system/bot_service/tests/: conftest.py  test_handlers.py  test_jwt.py  test_openrouter_client.py
