[project]
name = "bot-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.10.0",
    "celery>=5.4.0",
    "fakeredis>=2.23.0",
    "fastapi>=0.112.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]
